--- a/VaccineKiosk.ioc
+++ b/VaccineKiosk.ioc
@@ -18,14 +18,15 @@ Mcu.IPNb=4
 Mcu.Name=STM32F407V(E-G)Tx
 Mcu.Package=LQFP100
 Mcu.Pin0=PA0-WKUP
-Mcu.Pin1=PA2
-Mcu.Pin2=PD12
-Mcu.Pin3=PD13
-Mcu.Pin4=PD14
-Mcu.Pin5=PD15
-Mcu.Pin6=VP_FREERTOS_VS_CMSIS_V1
-Mcu.Pin7=VP_SYS_VS_tim1
-Mcu.PinsNb=8
+Mcu.Pin1=PA1
+Mcu.Pin2=PA2
+Mcu.Pin3=PD12
+Mcu.Pin4=PD13
+Mcu.Pin5=PD14
+Mcu.Pin6=PD15
+Mcu.Pin7=VP_FREERTOS_VS_CMSIS_V1
+Mcu.Pin8=VP_SYS_VS_tim1
+Mcu.PinsNb=9
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F407VGTx
@@ -50,6 +51,8 @@ NVIC.TimeBaseIP=TIM1
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
 PA0-WKUP.Locked=true
 PA0-WKUP.Signal=GPIO_Input
+PA1.Locked=true
+PA1.Signal=GPIO_Output
 PA2.Locked=true
 PA2.Signal=GPIO_Input
 PD12.Locked=true
@@ -83,12 +86,13 @@ ProjectManager.PreviousToolchain=
 ProjectManager.ProjectBuild=false
 ProjectManager.ProjectFileName=VaccineKiosk.ioc
 ProjectManager.ProjectName=VaccineKiosk
+ProjectManager.ProjectStructure=
 ProjectManager.RegisterCallBack=
 ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true
 RCC.AHBFreq_Value=16000000
 RCC.APB1Freq_Value=16000000
 RCC.APB2Freq_Value=16000000
@@ -114,4 +118,5 @@ VP_FREERTOS_VS_CMSIS_V1.Signal=FREERTOS_VS_CMSIS_V1
 VP_SYS_VS_tim1.Mode=TIM1
 VP_SYS_VS_tim1.Signal=SYS_VS_tim1
 board=custom
+rtos.0.ip=FREERTOS
 isbadioc=false
