--- a/VaccineKiosk.ioc
+++ b/VaccineKiosk.ioc
@@ -4,8 +4,8 @@ CAD.pinconfig=
 CAD.provider=
 FREERTOS.FootprintOK=true
 FREERTOS.IPParameters=Tasks01,Queues01,FootprintOK
-FREERTOS.Queues01=vaccineQueue,10,uint16_t,0,Dynamic,NULL,NULL
-FREERTOS.Tasks01=defaultTask,0,128,StartDefaultTask,Default,NULL,Dynamic,NULL,NULL;injectTask,2,128,StartInjectTask,Default,NULL,Dynamic,NULL,NULL
+FREERTOS.Queues01=vaccineQueue,1,uint16_t,0,Dynamic,NULL,NULL
+FREERTOS.Tasks01=defaultTask,-3,128,StartDefaultTask,Default,NULL,Dynamic,NULL,NULL;injectTask,2,128,StartInjectTask,Default,NULL,Dynamic,NULL,NULL;selectTask,-1,128,StartSelectTask,Default,NULL,Dynamic,NULL,NULL;paymentTask,0,128,StartPaymentTask,Default,NULL,Dynamic,NULL,NULL;armTask,1,128,StartArmTask,Default,NULL,Dynamic,NULL,NULL
 File.Version=6
 KeepUserPlacement=false
 Mcu.CPN=STM32F407VGT6
@@ -86,7 +86,6 @@ ProjectManager.PreviousToolchain=
 ProjectManager.ProjectBuild=false
 ProjectManager.ProjectFileName=VaccineKiosk.ioc
 ProjectManager.ProjectName=VaccineKiosk
-ProjectManager.ProjectStructure=
 ProjectManager.RegisterCallBack=
 ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=STM32CubeIDE
@@ -118,5 +117,4 @@ VP_FREERTOS_VS_CMSIS_V1.Signal=FREERTOS_VS_CMSIS_V1
 VP_SYS_VS_tim1.Mode=TIM1
 VP_SYS_VS_tim1.Signal=SYS_VS_tim1
 board=custom
-rtos.0.ip=FREERTOS
 isbadioc=false
