--- a/VaccineKiosk.ioc
+++ b/VaccineKiosk.ioc
@@ -5,7 +5,7 @@ CAD.provider=
 FREERTOS.FootprintOK=true
 FREERTOS.IPParameters=Tasks01,Queues01,FootprintOK
 FREERTOS.Queues01=vaccineQueue,1,uint16_t,0,Dynamic,NULL,NULL
-FREERTOS.Tasks01=defaultTask,-3,128,StartDefaultTask,Default,NULL,Dynamic,NULL,NULL;injectTask,2,128,StartInjectTask,Default,NULL,Dynamic,NULL,NULL;selectTask,-1,128,StartSelectTask,Default,NULL,Dynamic,NULL,NULL;paymentTask,0,128,StartPaymentTask,Default,NULL,Dynamic,NULL,NULL;armTask,1,128,StartArmTask,Default,NULL,Dynamic,NULL,NULL
+FREERTOS.Tasks01=defaultTask,-3,128,StartDefaultTask,Default,NULL,Dynamic,NULL,NULL;injectTask,-1,128,StartInjectTask,Default,NULL,Dynamic,NULL,NULL;selectTask,2,128,StartSelectTask,Default,NULL,Dynamic,NULL,NULL;paymentTask,1,128,StartPaymentTask,Default,NULL,Dynamic,NULL,NULL;armTask,0,128,StartArmTask,Default,NULL,Dynamic,NULL,NULL
 File.Version=6
 KeepUserPlacement=false
 Mcu.CPN=STM32F407VGT6
@@ -19,14 +19,16 @@ Mcu.Name=STM32F407V(E-G)Tx
 Mcu.Package=LQFP100
 Mcu.Pin0=PA0-WKUP
 Mcu.Pin1=PA1
+Mcu.Pin10=VP_SYS_VS_tim1
 Mcu.Pin2=PA2
-Mcu.Pin3=PD12
-Mcu.Pin4=PD13
-Mcu.Pin5=PD14
-Mcu.Pin6=PD15
-Mcu.Pin7=VP_FREERTOS_VS_CMSIS_V1
-Mcu.Pin8=VP_SYS_VS_tim1
-Mcu.PinsNb=9
+Mcu.Pin3=PA4
+Mcu.Pin4=PA5
+Mcu.Pin5=PD12
+Mcu.Pin6=PD13
+Mcu.Pin7=PD14
+Mcu.Pin8=PD15
+Mcu.Pin9=VP_FREERTOS_VS_CMSIS_V1
+Mcu.PinsNb=11
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F407VGTx
@@ -55,6 +57,10 @@ PA1.Locked=true
 PA1.Signal=GPIO_Output
 PA2.Locked=true
 PA2.Signal=GPIO_Input
+PA4.Locked=true
+PA4.Signal=GPIO_Input
+PA5.Locked=true
+PA5.Signal=GPIO_Input
 PD12.Locked=true
 PD12.Signal=GPIO_Output
 PD13.Locked=true
@@ -86,6 +92,7 @@ ProjectManager.PreviousToolchain=
 ProjectManager.ProjectBuild=false
 ProjectManager.ProjectFileName=VaccineKiosk.ioc
 ProjectManager.ProjectName=VaccineKiosk
+ProjectManager.ProjectStructure=
 ProjectManager.RegisterCallBack=
 ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=STM32CubeIDE
@@ -117,4 +124,5 @@ VP_FREERTOS_VS_CMSIS_V1.Signal=FREERTOS_VS_CMSIS_V1
 VP_SYS_VS_tim1.Mode=TIM1
 VP_SYS_VS_tim1.Signal=SYS_VS_tim1
 board=custom
+rtos.0.ip=FREERTOS
 isbadioc=false
