--- a/VaccineKiosk.ioc
+++ b/VaccineKiosk.ioc
@@ -19,16 +19,17 @@ Mcu.Name=STM32F407V(E-G)Tx
 Mcu.Package=LQFP100
 Mcu.Pin0=PA0-WKUP
 Mcu.Pin1=PA1
-Mcu.Pin10=VP_SYS_VS_tim1
+Mcu.Pin10=VP_FREERTOS_VS_CMSIS_V1
+Mcu.Pin11=VP_SYS_VS_tim1
 Mcu.Pin2=PA2
 Mcu.Pin3=PA4
 Mcu.Pin4=PA5
-Mcu.Pin5=PD12
-Mcu.Pin6=PD13
-Mcu.Pin7=PD14
-Mcu.Pin8=PD15
-Mcu.Pin9=VP_FREERTOS_VS_CMSIS_V1
-Mcu.PinsNb=11
+Mcu.Pin5=PA6
+Mcu.Pin6=PD12
+Mcu.Pin7=PD13
+Mcu.Pin8=PD14
+Mcu.Pin9=PD15
+Mcu.PinsNb=12
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F407VGTx
@@ -61,6 +62,8 @@ PA4.Locked=true
 PA4.Signal=GPIO_Input
 PA5.Locked=true
 PA5.Signal=GPIO_Input
+PA6.Locked=true
+PA6.Signal=GPIO_Input
 PD12.Locked=true
 PD12.Signal=GPIO_Output
 PD13.Locked=true
