Finished arm check and created injection task

--- a/VaccineKiosk.ioc
+++ b/VaccineKiosk.ioc
@@ -5,7 +5,7 @@ CAD.provider=
 FREERTOS.FootprintOK=true
 FREERTOS.IPParameters=Tasks01,Queues01,FootprintOK
 FREERTOS.Queues01=vaccineQueue,1,uint16_t,0,Dynamic,NULL,NULL
-FREERTOS.Tasks01=defaultTask,-3,128,StartDefaultTask,Default,NULL,Dynamic,NULL,NULL;injectTask,-1,128,StartInjectTask,Default,NULL,Dynamic,NULL,NULL;selectTask,2,128,StartSelectTask,Default,NULL,Dynamic,NULL,NULL;paymentTask,1,128,StartPaymentTask,Default,NULL,Dynamic,NULL,NULL;armTask,0,128,StartArmTask,Default,NULL,Dynamic,NULL,NULL
+FREERTOS.Tasks01=defaultTask,2,128,StartDefaultTask,Default,NULL,Dynamic,NULL,NULL;injectTask,-1,128,StartInjectTask,Default,NULL,Dynamic,NULL,NULL;selectTask,2,128,StartSelectTask,Default,NULL,Dynamic,NULL,NULL;paymentTask,1,128,StartPaymentTask,Default,NULL,Dynamic,NULL,NULL;armTask,0,128,StartArmTask,Default,NULL,Dynamic,NULL,NULL;failsafeTask,2,128,StartFailSafe,Default,NULL,Dynamic,NULL,NULL
 File.Version=6
 KeepUserPlacement=false
 Mcu.CPN=STM32F407VGT6
@@ -18,18 +18,19 @@ Mcu.IPNb=4
 Mcu.Name=STM32F407V(E-G)Tx
 Mcu.Package=LQFP100
 Mcu.Pin0=PA0-WKUP
-Mcu.Pin1=PA1
-Mcu.Pin10=VP_FREERTOS_VS_CMSIS_V1
-Mcu.Pin11=VP_SYS_VS_tim1
-Mcu.Pin2=PA2
-Mcu.Pin3=PA4
-Mcu.Pin4=PA5
-Mcu.Pin5=PA6
-Mcu.Pin6=PD12
-Mcu.Pin7=PD13
-Mcu.Pin8=PD14
-Mcu.Pin9=PD15
-Mcu.PinsNb=12
+Mcu.Pin1=PA2
+Mcu.Pin10=PD6
+Mcu.Pin11=VP_FREERTOS_VS_CMSIS_V1
+Mcu.Pin12=VP_SYS_VS_tim1
+Mcu.Pin2=PA4
+Mcu.Pin3=PA5
+Mcu.Pin4=PA6
+Mcu.Pin5=PD12
+Mcu.Pin6=PD13
+Mcu.Pin7=PD14
+Mcu.Pin8=PD15
+Mcu.Pin9=PD2
+Mcu.PinsNb=13
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F407VGTx
@@ -54,8 +55,6 @@ NVIC.TimeBaseIP=TIM1
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
 PA0-WKUP.Locked=true
 PA0-WKUP.Signal=GPIO_Input
-PA1.Locked=true
-PA1.Signal=GPIO_Output
 PA2.Locked=true
 PA2.Signal=GPIO_Input
 PA4.Locked=true
@@ -72,6 +71,10 @@ PD14.Locked=true
 PD14.Signal=GPIO_Output
 PD15.Locked=true
 PD15.Signal=GPIO_Output
+PD2.Locked=true
+PD2.Signal=GPIO_Output
+PD6.Locked=true
+PD6.Signal=GPIO_Output
 PinOutPanel.RotationAngle=0
 ProjectManager.AskForMigrate=true
 ProjectManager.BackupPrevious=false
