System loops now
System successfully loops when vaccine is finished

--- a/VaccineKiosk.ioc
+++ b/VaccineKiosk.ioc
@@ -4,7 +4,7 @@ CAD.pinconfig=
 CAD.provider=
 FREERTOS.FootprintOK=true
 FREERTOS.IPParameters=Tasks01,Queues01,FootprintOK
-FREERTOS.Queues01=vaccineQueue,1,uint16_t,0,Dynamic,NULL,NULL
+FREERTOS.Queues01=vaccineQueue,1,uint16_t,0,Dynamic,NULL,NULL;taskQueue,1,uint16_t,0,Dynamic,NULL,NULL
 FREERTOS.Tasks01=defaultTask,2,128,StartDefaultTask,Default,NULL,Dynamic,NULL,NULL;injectTask,-1,128,StartInjectTask,Default,NULL,Dynamic,NULL,NULL;selectTask,2,128,StartSelectTask,Default,NULL,Dynamic,NULL,NULL;paymentTask,1,128,StartPaymentTask,Default,NULL,Dynamic,NULL,NULL;armTask,0,128,StartArmTask,Default,NULL,Dynamic,NULL,NULL;failsafeTask,2,128,StartFailSafe,Default,NULL,Dynamic,NULL,NULL
 File.Version=6
 KeepUserPlacement=false
@@ -55,12 +55,20 @@ NVIC.TimeBaseIP=TIM1
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
 PA0-WKUP.Locked=true
 PA0-WKUP.Signal=GPIO_Input
+PA2.GPIOParameters=GPIO_PuPd
+PA2.GPIO_PuPd=GPIO_PULLUP
 PA2.Locked=true
 PA2.Signal=GPIO_Input
+PA4.GPIOParameters=GPIO_PuPd
+PA4.GPIO_PuPd=GPIO_PULLUP
 PA4.Locked=true
 PA4.Signal=GPIO_Input
+PA5.GPIOParameters=GPIO_PuPd
+PA5.GPIO_PuPd=GPIO_PULLUP
 PA5.Locked=true
 PA5.Signal=GPIO_Input
+PA6.GPIOParameters=GPIO_PuPd
+PA6.GPIO_PuPd=GPIO_PULLUP
 PA6.Locked=true
 PA6.Signal=GPIO_Input
 PD12.Locked=true
